Automatically load necessary classes